[package]
name = "iiif-tiler-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
derive = "1.0.0"
features = "0.10.0"
image = "0.25.5"
log = "0.4.27"
pretty_env_logger = "0.5.0"
serde = "1.0.215"
serde_json = {version = "1.0.133", features = ["preserve_order"]}
tempfile = "3.19.1"
